; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_do_increment_album_field.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_do_increment_album_field.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@types = common dso_local global i64 0, align 8
@ALBUM_TYPE = common dso_local global i64 0, align 8
@LEV_PHOTO_INCREM_ALBUM_FIELD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_increment_album_field(i32 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i8*, i8** %8, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %35

14:                                               ; preds = %4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @check_album_id(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %35

19:                                               ; preds = %14
  %20 = load i64, i64* @types, align 8
  %21 = load i64, i64* @ALBUM_TYPE, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @get_field_id(i64 %22, i8* %23)
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %10, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %19
  store i32 0, i32* %5, align 4
  br label %35

28:                                               ; preds = %19
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* @LEV_PHOTO_INCREM_ALBUM_FIELD, align 4
  %34 = call i32 @do_increment_data(i32 %29, i32 %30, i32 %31, i32 %32, i32 %33)
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %28, %27, %18, %13
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @check_album_id(i32) #1

declare dso_local i32 @get_field_id(i64, i8*) #1

declare dso_local i32 @do_increment_data(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
